name: Haskell-Binary-Tree
version: 1.0
cabal-version: 1.6
build-type: Simple
license: PublicDomain
stability: experimental
description:
    Managing binary-trees in Haskell
author: Alexis Gallèpe
extra-source-files:
    balanced-search-trees-in-haskell.txt
    README.md
Executable revertbinarytree
  main-is: HSbinary_tree.hs
  buildable: True
  build-depends:
      base -any
