name: bittorrent
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
extra-source-files:
    sellings.log
Executable bittorrent
  main-is: Bittorrent.hs
  buildable: True
  build-depends:
      base -any,
      bytestring -any,
      time -any,
      attoparsec -any
